vtcode-tui/src/core_tui/widgets/snapshots/vtcode_tui__core_tui__widgets__history_picker__tests__history_picker_render_empty.snap
---
source: vtcode-tui/src/core_tui/widgets/history_picker.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                ╭History (Ctrl+R)──────────────────────────────╮                "
"                │Tab Navigate · Enter Accept · Esc Cancel      │                "
"                │No history entries                            │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                │                                              │                "
"                ╰──────────────────────────────────────────────╯                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
